Fix sidebar and his overflow positioning. Fix footer sections. Add price in card elements

--- a/css/_advantages.scss
+++ b/css/_advantages.scss
@@ -28,6 +28,7 @@
 
 
   &__subtitle {
+    color: #33719be3;
     margin-bottom: 5px;
   }
 }
