--- a/css/_catalog.scss
+++ b/css/_catalog.scss
@@ -2,7 +2,7 @@
 
   &-btn {
     width: 100%;
-    padding: 7px 0 7px 0;
+    padding: 10px 0 10px 0;
     background-color: #ece579;
     border: none;
     cursor: pointer;
