--- a/css/_header.scss
+++ b/css/_header.scss
@@ -101,12 +101,15 @@
 
 .phone {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  margin-bottom: 30px;
 
   &__number {
-    text-decoration: none;
-    color: black;
+    color: currentColor;
+  }
+
+  &__number + * {
+    margin-top: 20px;
   }
 
 
@@ -114,6 +117,7 @@
     display: inline-block;
     vertical-align: middle;
     margin-right: 10px;
+    fill: currentColor;
   }
 
 
