--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -24,7 +24,7 @@
   }
 
   &--open {
-    position: absolute;
+    position: fixed;
     z-index: 1000;
     background-color: antiquewhite;
     width: 85%;
@@ -76,11 +76,11 @@
 
 
 .overflow {
-  position: absolute;
+  position: fixed;
   top: 0;
+  left: 0;
   right: 0;
   bottom: 0;
-  left: 0;
   z-index: 500;
   background-color: rgba(0,0,0, .7);
 }
