--- a/css/_social.scss
+++ b/css/_social.scss
@@ -1,6 +1,6 @@
 .social {
   &__title {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     text-align: center;
     color: #dfa741;
   }
