--- a/css/_widget.scss
+++ b/css/_widget.scss
@@ -55,6 +55,12 @@
     color: #615d61;
   }
 
+  &__price {
+    color: #33719be3;
+    font-size: 20px;
+    font-weight: bold;
+  }
+
   &__describe {
     color: #615d61;
   }
